# ChatgptModGeode

./: CMakeLists.txt  README.md  mod.json
src/: main.cpp
